--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ jacocoTestReport {
   reports {
     xml.enabled false
     csv.enabled false
-    html.destination "${buildDir}/jacocoHtml"
+    html.destination file("${buildDir}/jacocoHtml")
   }
 }
 
@@ -35,6 +35,11 @@ repositories {
     maven { url "https://plugins.gradle.org/m2/" }
 }
 
+task helloWorld
+
+helloWorld.doLast {
+    println("helloworld")
+}
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
@@ -43,7 +48,8 @@ dependencies {
     implementation 'com.google.guava:guava:20.0'
 
     // Use JUnit test framework
-     testCompile 'org.hamcrest:hamcrest-core:1.3'
      testCompile 'junit:junit:4.12'
-     testCompile 'org.mockito:mockito-all:1.9.5'
+//     testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.1'
+     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '1.7.1'
 }
